--- a/Sprint 1/filmFinder/templates/home.html
+++ b/Sprint 1/filmFinder/templates/home.html
@@ -428,8 +428,9 @@
 		<div class="detail-recom-content">
 			<div class="recom-content">
 				<div class="recom-movie-img">
-					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.0.poster}}.jpg">
-
+					<a href="/film/{{movies.0.id}}">
+						<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.0.poster}}.jpg">
+					</a>
 				</div>
 				<div class="recom-movie-detail">
 					<div class="recom-movie-title">
@@ -446,8 +447,9 @@
 			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
-					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.1.poster}}.jpg">
-
+					<a href="/film/{{movies.1.id}}">
+						<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.1.poster}}.jpg">
+					</a>
 				</div>
 				<div class="recom-movie-detail">
 					<div class="recom-movie-title">
@@ -464,8 +466,9 @@
 			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
-					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.2.poster}}.jpg">
-
+					<a href="/film/{{movies.2.id}}">
+						<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.2.poster}}.jpg">
+					</a>
 				</div>
 				<div class="recom-movie-detail">
 					<div class="recom-movie-title">
@@ -482,8 +485,9 @@
 			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
-					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.3.poster}}.jpg">
-
+					<a href="/film/{{movies.3.id}}">
+						<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.3.poster}}.jpg">
+					</a>
 				</div>
 				<div class="recom-movie-detail">
 					<div class="recom-movie-title">
@@ -500,8 +504,9 @@
 			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
-					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.4.poster}}.jpg">
-
+					<a href="/film/{{movies.4.id}}">
+						<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.4.poster}}.jpg">
+					</a>
 				</div>
 				<div class="recom-movie-detail">
 					<div class="recom-movie-title">
@@ -518,8 +523,9 @@
 			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
-					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.5.poster}}.jpg">
-
+					<a href="/film/{{movies.5.id}}">
+						<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.5.poster}}.jpg">
+					</a>
 				</div>
 				<div class="recom-movie-detail">
 					<div class="recom-movie-title">
@@ -536,8 +542,9 @@
 			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
-					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.6.poster}}.jpg">
-
+					<a href="/film/{{movies.6.id}}">
+						<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.6.poster}}.jpg">
+					</a>
 				</div>
 				<div class="recom-movie-detail">
 					<div class="recom-movie-title">
@@ -554,8 +561,9 @@
 			<hr>
 			<div class="recom-content">
 				<div class="recom-movie-img">
-					<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.7.poster}}.jpg">
-
+					<a href="/film/{{movies.7.id}}">
+						<img style="height:175px; width:118px;" src="../static/poster_downloads/{{movies.7.poster}}.jpg">
+					</a>
 				</div>
 				<div class="recom-movie-detail">
 					<div class="recom-movie-title">
