--- a/Sprint 1/filmFinder/templates/search_temp.html
+++ b/Sprint 1/filmFinder/templates/search_temp.html
@@ -1,87 +1,85 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="page-top">
-	<h2>Search results Page</h2>
+  <h2>Search results Page</h2>
 	<ul class ="center">
 		<li><a href="{{ url_for('home') }}">Home</a></li>
 		<li>/ </li>
 		<li style = "color: #ec7532;">Search result</li>
 	 </ul>
 </div>
-    <h1 class = 'center'>Search Results:</h1>
+<h1 class = 'center'>Search Results:</h1>
+<hr>
     <form method="POST">
   
       <!-- <div align="center"></div> -->
-      {{condition_results}}<br><br>
-      <div style="border: 2px solid rgb(5, 5, 5);
+      <p style="text-indent:2em;"><b>{{condition_results}}</b></p><br>
+      <div style="border: 1px solid #dddddd;
       border-radius: 30px;
       padding:25px 10px;
-      background-color:rgba(240, 255, 255, 0.5);
+      margin: 0 50px;
       " >
       {% for result in search_results %}
-      <div class="so-result-info search-movie clearfix">
-        <div class="result_ugc result-content">
-        
-        <div class="tele_box">
-        <div class="vari_pho">
-        <a class="vari_p report-click report-action" href="film/{{result.id}}" target="_blank">
-        <img src="../static/poster_downloads/{{result.poster_path}}.jpg">
-        </a>
-        </div>
-        <div class="tele_intro">
-        <div class="tele_hd">
-        
-        <a href="film/{{result.id}}" target="_blank" class="report-click report-action"><b>{{result.title}}</b></a>
-        <a class="year">{{result.release_date}}</a>
-        
-        
-        </div>
-        <div class="tele_line">
-        <div class="info_item">
-        <span class="label">Casts:</span>
-        <span class="cont">
-        <!-- <a href="#" target="_blank">xxx</a> <a href="#" target="_blank">yyy</a> <a href="#" target="_blank">zzz</a> <a href="#" target="_blank">ttt</a>  -->
-        {%for cast in result.casts%}
-        <a>{{"|"+cast}}</a>
-        {%endfor%}{{"|"}}
-        <!-- {{result.casts}}</span> -->
-        </div>
-        <div class="info_item">
-        <span class="label">Director:</span>
-        <span class="cont">
-        <a href="#" target="_blank">{{result.crew}}</a></span>
-        </div>
-        </div>
-        <div class="tele_line">
-        <div class="info_item">
-        <span class="label">Genre:</span>
-        <span class="cont">
-        {%for genre in result.genres%}
-        <a>{{"|"+genre}}</a>
-        {%endfor%}{{"|"}}
-        </div>
-        <div class="info_item">
-        <span class="label">Country:</span>
-        <span class="cont">
-        {%for pc in result.production_countries%}
-        <a>{{"|"+pc}}</a>
-        {%endfor%}{{"|"}}
-        </div>
-        </div>
-        <div class="tele_item_des">
-        <span class="label">Details:</span>
-        <span class="desc_text">
-          {{result.overview}}
-            <a class="desc_detail report-click report-action" style="float:right" target="_blank" href="film/{{result.id}}">details:
-        </a>
-        </span>
-        <a style="margin-top:45px;" class="so-result-btn center play report-click report-action" target="_blank" href="film/{{result.id}}"><span><em></em>More details</span></a>
-        </div>
-        </div>
-        </div>
-        </div>
+        <div class="so-result-info">
+          <div class="result_ugc result-content">
+            <div class="tele_box">
+              <div class="vari_pho">
+                <a class="vari_p" href="film/{{result.id}}" target="_blank">
+                  <img src="../static/poster_downloads/{{result.poster_path}}.jpg">
+                </a>
+              </div>
+              <div class="tele_intro">
+                <div class="tele_hd">
+                  <a href="film/{{result.id}}" target="_blank"><b style="font-size: x-large;">{{result.title}}</b></a>
+                  <a class="year">{{result.release_date}}</a>
+                </div>
+                <div class="tele_line">
+                  <div class="info_item">
+                  <span class="label">Casts:</span>
+                  <span class="cont">
+                  {%for cast in result.casts%}
+                    <a>{{"|"+cast}}</a>
+                  {%endfor%}{{"|"}}    </span> 
+                  </div>
+                  <div class="info_item">
+                    <span class="label">Director:</span>
+                    <span class="cont">
+                      <a href="#" target="_blank">{{result.crew}}</a></span>
+                  </div>
+                </div>
+                <div class="tele_line">
+                  <div class="info_item">
+                    <span class="label">Genre:</span>
+                    <span class="cont">
+                    {%for genre in result.genres%}
+                      <a>{{"|"+genre}}</a>
+                    {%endfor%}{{"|"}}
+                  </div>
+                <div class="info_item">
+                  <span class="label">Country:</span>
+                  <span class="cont">
+                  {%for pc in result.production_countries%}
+                    <a>{{"|"+pc}}</a>
+                    {%endfor%}{{"|"}}
+                </div>
+              </div>
+              <div class="tele_item_des">
+                <span class="label">Details:</span>
+                <span class="desc_text">
+                {{result.overview}}
+                  <a class="desc_detail" style="float:right" target="_blank" href="film/{{result.id}}">details>>
+                  </a>
+                </span>
+                <div class="buttons center">
+                  <button class="draw meet" type="button" style="margin-top:45px;margin-right:10%;" onclick="window.location.href='film/{{result.id}}'">More detail</button>
+               </div>
+              </div>
+            </div>
+            </div>
+          </div>
         </div>
       {% endfor %}
       </div>
-      </form> 
+  
+    </form> 
 {% endblock content %}
