--- a/Sprint 1/filmFinder/static/top-bar.css
+++ b/Sprint 1/filmFinder/static/top-bar.css
@@ -56,11 +56,11 @@
 	margin-left: 20px;
 
 	width: 40%;
-	height: 60px;
-	/*background: transparent;
+	height: 40px;
+	/* background: transparent;
     color: #333;
-    border: medium none;
-    padding: 5px 50px 5px 10px; */
+    border: medium none; */
+    /* padding: 10px 0 10px 0; */
 	
 }
 .menu-end {
