--- a/Sprint 1/filmFinder/static/common.css
+++ b/Sprint 1/filmFinder/static/common.css
@@ -11,11 +11,16 @@ body {
 	background: #fafafa;
 	color: #333333;
 	margin: 0px;
-  }
+}
+
+  h1 {
+	font-weight: 300;
+	font-size: 2.5em;
+}
   
   h1, h2, h3, h4, h5, h6 {
 	color: #444444;
-  }
+}
   
   .bg-steel {
 	background-color: #2d3236;
