--- a/Sprint 1/filmFinder/static/results.css
+++ b/Sprint 1/filmFinder/static/results.css
@@ -1,6 +1,6 @@
 /* results info */
 .so-result-info {
-    padding:15px 100px;
+    padding:10px 100px;
 }
 .tele_box {
     border-radius: 30px;
@@ -160,6 +160,7 @@
   width:100%;
     /*margin: 22px 10px 0 0;*/
   margin-top: 10px;
+  margin-bottom: 10px;
   float: left;
 
   }
@@ -208,7 +209,7 @@
 }
 
 .so-result-btn:hover {
-  background-color: #666;
+  background-color: #ff5f00;
 }
 .so-result-btn.loading:before {
   content: '';
