--- a/Sprint 1/filmFinder/templates/blocklist.html
+++ b/Sprint 1/filmFinder/templates/blocklist.html
@@ -37,9 +37,11 @@
                         <th scope="row">{{blocklist.index(user)+1}}</th>
                         <td>{{user.username}}</td>
                         <td>
+                            {%if identify == True%}
                             <form action="../blocklist/{{current_user.id}}" method="POST">
                                 <button type="submit" class="btn btn-danger" name="remove_from_blocklist" value="{{user.id}}">Remove</button>
                             </form>
+                            {%endif%}
                         </td>
                     </tr>
                     {%endfor%}
