--- a/Sprint 1/filmFinder/static/button.css
+++ b/Sprint 1/filmFinder/static/button.css
@@ -1,3 +1,4 @@
+
 .buttons button {
   background: none;
   border: 0;
@@ -12,12 +13,15 @@
   vertical-align: middle;
 }
 
-button::before, button::after {
+.buttons button::before {
   box-sizing: inherit;
   content: '';
   position: absolute;
-  width: 100%;
-  height: 100%;
+}
+.buttons button::after{
+  box-sizing: inherit;
+  content: '';
+  position: absolute;
 }
 
 .draw {
