--- a/Sprint 1/filmFinder/templates/blocklist.html
+++ b/Sprint 1/filmFinder/templates/blocklist.html
@@ -12,7 +12,7 @@
             <li style = "color: #ec7532;">My Blocklist</li>
          </ul>
     </div>
-    <div class = "bootstrapiso">
+    <div class = "bootstrapiso acc-mar">
         <div class="content-section">
             <div class="media">
                 <img class="rounded-circle account-img" src="../static/profile_pics/{{current_user.profile_image}}">
@@ -22,7 +22,10 @@
                 </div>   
             </div>
             <hr>
-            <br>   
+            <br> 
+            {%if blocklist == []%}
+            <h5>You have not add any users into your blocklist!</h5>
+            {%endif%}  
             <table class="table table-hover">
                 <thead>
                   <tr>
@@ -37,11 +40,9 @@
                         <th scope="row">{{blocklist.index(user)+1}}</th>
                         <td>{{user.username}}</td>
                         <td>
-                            {%if identify == True%}
                             <form action="../blocklist/{{current_user.id}}" method="POST">
                                 <button type="submit" class="btn btn-danger" name="remove_from_blocklist" value="{{user.id}}">Remove</button>
                             </form>
-                            {%endif%}
                         </td>
                     </tr>
                     {%endfor%}
