--- a/Sprint 1/filmFinder/templates/layout.html
+++ b/Sprint 1/filmFinder/templates/layout.html
@@ -92,8 +92,10 @@
       
 		  {% with messages = get_flashed_messages(with_categories=true) %}
 		  	{% if messages %}
-			  	{% for category, message in messages %}
-			  		<div class="alert  alert-primary alert-{{ category }}">{{ message }}</div>
+          {% for category, message in messages %}
+          <div class="bootstrapiso">
+            <div class="alert  alert-primary alert-{{ category }}" role="alert">{{ message }}</div>
+          </div>
 			  	{% endfor %}
 		  	{% endif %}
       {% endwith%} 
@@ -110,16 +112,25 @@
 		    		</div>
 		    		<div class="bottom-link">
 		    			<div class="link-title">Quick Links</div>
-		    			<div class="link-word"><a href="">Home</a></div>
-		    			<div class="link-word"><a href="">Movie</a></div>
-		    			<div class="link-word"><a href="">Search</a></div>
-		    		</div>
-		    		<div class="bottom-link">
+		    			<div class="link-word"><a href="/">Home</a></div>
+		    			<div class="link-word"><a href="{{ url_for('about') }}">About</a></div>
+		    			<div class="link-word"><a href="{{ url_for('advanced_search') }}">Search</a></div>
+            </div>
+            {% if current_user.is_authenticated %}
+            <div class="bottom-link">
 		    			<div class="link-title">Account</div>
-		    			<div class="link-word"><a href="">My account</a></div>
-		    			<div class="link-word"><a href="">My wishlist</a></div>
-		    			<div class="link-word"><a href="">My blocklist</a></div>
+		    			<div class="link-word"><a href="/account/{{ current_user.id }}">My account</a></div>
+		    			<div class="link-word"><a href="/wishlist/{{ current_user.id }}">My wishlist</a></div>
+		    			<div class="link-word"><a href="/blocklist/{{ current_user.id }}">My blocklist</a></div>
 		    		</div>
+            {%else%}
+            <div class="bottom-link">
+		    			<div class="link-title">Join us!</div>
+		    			<div class="link-word"><a href="">Login</a></div>
+		    			<div class="link-word"><a href="">sign up</a></div>
+		    		</div>
+            {%endif%}
+		    		
 		    	</div>
 		    	<div class="bottom-col-2">
 		    		UNSW 2020T3 COMP9900 HDpp
