--- a/Sprint 1/filmFinder/static/common.css
+++ b/Sprint 1/filmFinder/static/common.css
@@ -164,8 +164,8 @@ body {
 	padding: 50px 0;
 	/* height: 150px; */
 	width: 100%;
-	background: #f6a651;
-	/* background: url(../static/images/dbk2.jpg) no-repeat scroll 0 0/cover; */
+	/* background: #f6a651; */
+	background: url(../static/images/dbk3.jpg) no-repeat scroll 0 0/cover;
 	text-align: center;
 	/*border: 2px solid red;*/
 }
@@ -194,6 +194,10 @@ body {
 
 .topmargin{
 	margin-top:20px;
+}
+
+.acc-mar {
+	margin:15px 12% 20px 12%;
 }
   
   
